<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="db_name" tools:ignore="MissingTranslation">"jwp.sqlite3"</string>
    <string name="db_version" tools:ignore="MissingTranslation">"8"</string>
    <string name="app_dir" tools:ignore="MissingTranslation">"JWP"</string>
    <string name="text_test" tools:ignore="MissingTranslation">"Text title"</string>

    <string name="app_name">"Publications of Jehovah's Witnesses"</string>
    <string name="app_name_shot">"JWP"</string>
    <string name="description">"JWP - is a program for readers of publications of Jehovah's Witnesses.
        Using this program, you will always have access to current issues of magazines, "The Watchtower" and "Awake."
        You will be able to download the publication in different languages ​​and in different formats (pdf, epub, mobi, mp3, aac).
        And to view the latest news from the site www.jw.org.
        The program works as a RSS client.
        Also you can enable the download video materials, books and brochures.
        Reminder: the use of mobile Internet - remember the traffic."</string>

    <string name="previous" tools:ignore="MissingTranslation">"Previous"</string>
    <string name="next" tools:ignore="MissingTranslation">"Next"</string>

    <string name="video_s" tools:ignore="MissingTranslation">"240p"</string>
    <string name="video_m" tools:ignore="MissingTranslation">"360p"</string>
    <string name="video_l" tools:ignore="MissingTranslation">"480p"</string>
    <string name="video_xl" tools:ignore="MissingTranslation">"720p"</string>

    <string name="pdf" tools:ignore="MissingTranslation">"PDF"</string>
    <string name="epub" tools:ignore="MissingTranslation">"EPUB"</string>
    <string name="mobi" tools:ignore="MissingTranslation">"MOBI"</string>
    <string name="mp3" tools:ignore="MissingTranslation">"MP3"</string>
    <string name="aac" tools:ignore="MissingTranslation">"AAC"</string>

    <string name="error_open_file">"Does not have a program to open the file"</string>
    <string name="kingdom_ministry">"Kingdom Ministry"</string>
    <string name="favorite_add">"Add to favorites"</string>
    <string name="favorite_remove">"Remove from favorites"</string>
    <string name="site_html_singly">"Download separately"</string>
    <string name="site_html_singly_summary">"Separately from news and magazines"</string>
    <string name="site_html">"Downloaded from the website"</string>
    <string name="site_html_summary">"Increase the time and traffic load"</string>
    <string name="video_books_brochures">"Video, Books and brochures"</string>
    <string name="video">"Video"</string>
    <string name="update_all_at_once">"Update all at once"</string>
    <string name="update_all_at_once_summary">"Update news, journals, video, books and brochures - simultaneously"</string>
    <string name="books_brochures">"Books and brochures"</string>
    <string name="player">"MP3 player"</string>
    <string name="player_open">"Open in player"</string>
    <string name="play">"Play"</string>
    <string name="first_run_title">"First run"</string>
    <string name="first_run_text">"This is your first time running the program. Please go to settings and select the appropriate options for you. Then press - Download RSS."</string>
    <string name="no_internet">"No internet connection!"</string>
    <string name="no_sdcard">"SDCARD is not connected!"</string>
    <string name="dialog_loaing_rss">"Download RSS. Please wait&#8230;"</string>
    <string name="dialog_loaing_img">"Update images. Please wait&#8230;"</string>
    <string name="dialog_loaing_site">"Loading from site. Please wait&#8230;"</string>
    <string name="management">"Management"</string>
    <string name="reporting">"Reporting"</string>
    <string name="reporting_summary">"Allow to automatically send reports on the application?"</string>
    <string name="download_images">"Load images"</string>
    <string name="download_images_summary">"Load images automatically after the upgrade?"</string>
    <string name="download_on_start">"Auto download"</string>
    <string name="download_on_start_summary">"Automatically download RSS on startup?"</string>
    <string name="language">"Language"</string>
    <string name="language_summary">"Select a language publications."</string>
    <string name="exit">"Quit"</string>
    <string name="settings">"Settings"</string>
    <string name="update">"Update"</string>
    <string name="interface_group">"Interface"</string>
    <string name="open">"Open"</string>
    <string name="choose_the_action">"Choose an action"</string>
    <string name="download_rss">"Download RSS"</string>
    <string name="download">"Download"</string>
    <string name="downloads">"Downloads"</string>
    <string name="download_title">"Download files"</string>
    <string name="download_failed">"Error occurred during loading"</string>
    <string name="download_finished">"Download Complete!"</string>
    <string name="download_cancelled">"Download canceled!"</string>
    <string name="download_task_added">"File added to the download queue."</string>
    <string name="rss_pdf_summary">"Load RSS feed PDF format"</string>
    <string name="rss_epub_summary">"Load RSS feed EPUB format"</string>
    <string name="rss_mobi_summary">"Load RSS feed MOBI format"</string>
    <string name="rss_mp3_summary">"RSS feed upload MP3 format"</string>
    <string name="rss_aac_summary">"Load RSS feed AAC format"</string>
    <string name="journals_rss_chanel">"Journals - RSS Feeds"</string>
    <string name="journals">"Journals"</string>
    <string name="news">"News"</string>

</resources>