<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:background="#fff">

    <ImageView
        android:id="@+id/img"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignTop="@+id/title"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="2dp"
        android:contentDescription="@string/journals"
        android:src="@drawable/ic_noimages" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="2dp"
        android:textColor="@color/text_dark_blue"
        android:textSize="16sp"
        android:layout_toRightOf="@+id/img"
        android:paddingBottom="25dp"
        android:text="@string/text_test" />


    <ImageView
        android:id="@+id/video"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignBottom="@+id/img"
        android:layout_toLeftOf="@+id/type1"
        android:contentDescription="@string/video"
        android:src="@drawable/ic_icon_video"
        android:layout_alignParentBottom="true" />

    <ImageView
        android:id="@+id/type1"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/video"
        android:layout_marginRight="11dp"
        android:contentDescription="@string/video_xl"
        android:src="@drawable/ic_mp4_720_0"
        android:layout_alignParentBottom="true" />

</RelativeLayout>